# voice_demo_aug

./: .gitignore  Makefile  README.md
frontend/: package-lock.json  package.json  tailwind.config.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx  styles.css
frontend/src/components/: AudioChat.tsx  AudioPlayback.tsx  ChatDialog.tsx  ChatLoadingDots.tsx  Composer.tsx  Header.tsx  MessageBubble.tsx
frontend/src/components/icons/: ArrowUpIcon.tsx  ClockIcon.tsx  FunctionsIcon.tsx  MicIcon.tsx  PauseIcon.tsx  ShuffleIcon.tsx  WebSearchIcon.tsx  WriteIcon.tsx
frontend/src/components/messages/: FunctionCallMessage.tsx  HandoffMessage.tsx  TextMessage.tsx  WebSearchMessage.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/hooks/: useAudio.ts  useWebsocket.ts
frontend/src/lib/: types.ts  utils.ts
server/: pyproject.toml  server.py
server/app/: agent_config.py  mock_api.py  utils.py
